# AbstractGateway

./: .dockerignore  .gitignore  404.html  ACKNOWLEDGMENTS.md  ACKNOWLEDMENTS.md  CHANGELOD.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml  start-dev.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-ghcr.yml  release.yml
api/: index.html
apple-local-gateway-flow/: index.html
architecture/: index.html
backlog/completed/001_openapi_swagger_auth/: index.html
backlog/completed/0050_gateway_runtime_boundary_cleanup_for_workspace_comms_and_telegram/: index.html
backlog/completed/0051_model_residency_provider_task_contract_truth_regression/: index.html
backlog/completed/0052_gateway_music_generation_contract_for_thin_clients/: index.html
backlog/completed/0053_gateway_thin_client_catalog_and_readiness_contract_polish/: index.html
backlog/completed/0054_gateway_catalog_envelope_contract_for_thin_clients/: index.html
backlog/completed/0056_gateway_pdf_runtime_floor_and_e2e_contract/: index.html
backlog/completed/0057_gateway_runtime_core_vision_upscale_surface/: index.html
backlog/completed/0058_gateway_vision_adapter_and_batch_surface/: index.html
backlog/completed/010_versioned_client_capability_contract/: index.html
backlog/completed/020_abstractflow_gateway_first_editor_contract/: index.html
backlog/completed/030_gateway_session_prompt_cache_lifecycle/: index.html
backlog/completed/040_generated_media_gateway_contract/: index.html
backlog/completed/2026-05-08_gateway_install_profiles_and_config_entrypoint/: index.html
backlog/completed/2026-05-08_gateway_memory_store_resolver_and_triplestore_abstraction/: index.html
backlog/completed/2026-05-08_voice_profile_discovery_endpoint/: index.html
backlog/completed/2026-05-19_model_residency_gateway_control_plane/: index.html
backlog/completed/2026-05-20_gateway_durable_bloc_prompt_cache_contract/: index.html
backlog/completed/2026-05-20_gateway_prompt_cache_save_load_via_runtime/: index.html
backlog/completed/2026-05-20_truthful_media_residency_gateway_contract/: index.html
backlog/deprecated/2026-05-20_gateway_runtime_owned_run_truth_and_core_boundary/: index.html
backlog/overview/: index.html
backlog/proposed/0055_gateway_provider_backend_readiness_truth_for_thin_clients/: index.html
backlog/proposed/2026-05-08_voice_profile_discovery_endpoint/: index.html
backlog/proposed/2026-05-09_abstractflow_draft_spaces_and_ephemeral_runs/: index.html
backlog/proposed/2026-05-13_shared_identity_context/: index.html
backlog/proposed/2026-05-20_gateway_prompt_cache_save_load_via_runtime/: index.html
backlog/proposed/offline_first_gateway_connectivity/: index.html
configuration/: index.html
deployment/: index.html
docker/abstractgateway-server/: .env.example  Dockerfile  Dockerfile.nvidia  README.md  compose.nvidia.yml  compose.yml  entrypoint.sh
docs/: README.md  api.md  apple-local-gateway-flow.md  architecture.md  configuration.md  deployment.md  faq.md  getting-started.md  maintenance.md  security.md
docs/backlog/: overview.md
docs/backlog/completed/: 001_openapi_swagger_auth.md  0050_gateway_runtime_boundary_cleanup_for_workspace_comms_and_telegram.md  0051_model_residency_provider_task_contract_truth_regression.md  0052_gateway_music_generation_contract_for_thin_clients.md  0053_gateway_thin_client_catalog_and_readiness_contract_polish.md  0054_gateway_catalog_envelope_contract_for_thin_clients.md  0056_gateway_pdf_runtime_floor_and_e2e_contract.md  040_generated_media_gateway_contract.md  (+12 more)
faq/: index.html
flows/bundles/: Untitled-Flow@draft.7dc05dbc-58d5-4175-b58f-3531f5548246.flow  basic-agent.flow  basic-agent@0.0.1.flow  basic-followup@dev.flow  basic-llm-test@0.0.0.flow  basic@dev.flow  coder@dev.flow  features@dev.flow  ralph@dev.flow  telegram-agent@0.0.1.flow  test@dev.flow  yoda@dev.flow
getting-started/: index.html
maintenance/: index.html
scripts/: generate-llms-full.py
search/: search_index.json
security/: index.html
src/abstractgateway/: __init__.py  app.py  capability_catalog.py  capability_defaults.py  cli.py  config.py  config_cli.py  console.py  embeddings_config.py  host_metrics.py  memory_store.py  migrate.py  provider_connections.py  provider_defaults.py  provider_endpoint_profiles.py  run_retention.py  runner.py  service.py  stores.py  users.py  workflow_catalog.py  workflow_deprecations.py  workspace_tools.py
tests/: conftest.py  test_abstractflow_editor_gateway_contract.py  test_backlog_advisor_and_maintain_readonly_scope.py  test_backlog_browsing_recurrent_and_unparsed.py  test_backlog_exec_api_endpoints.py  test_backlog_exec_runner_basic.py  test_backlog_exec_runner_persists_ledger_log.py  test_backlog_template_and_attachments.py  test_backlog_write_endpoints_basic.py  test_capabilities_endpoint_contract.py  test_gateway_artifacts_endpoint.py  test_gateway_attachments_ingest.py  test_gateway_attachments_upload.py  test_gateway_audit_log_endpoints.py  test_gateway_bug_report_endpoint.py  test_gateway_bundle_default_scan.py  test_gateway_bundle_llm_tools_agents.py  test_gateway_bundle_upload_remove.py  test_gateway_capability_catalog_proxy.py  test_gateway_cli_split_runner.py  test_gateway_code_simulation.py  test_gateway_config_cli.py  test_gateway_console.py  test_gateway_discovery_endpoints.py  test_gateway_draft_run_retention.py  test_gateway_durable_bloc_prompt_cache_endpoints.py  test_gateway_e2e_split_api_runner.py  test_gateway_e2e_sqlite_wait_offloading_lmstudio.py  test_gateway_email_bridge_unit.py  test_gateway_email_inbox_endpoints.py  test_gateway_embeddings_endpoint.py  test_gateway_feature_report_endpoint.py  test_gateway_files_skim_endpoint.py  test_gateway_history_bundle_endpoint.py  test_gateway_host_metrics_gpu_endpoint.py  test_gateway_http_api.py  test_gateway_install_profiles.py  test_gateway_kg_query_endpoint.py  test_gateway_ledger_stream_closes_on_terminal.py  test_gateway_memory_store_resolver.py  (+36 more)
(+36 files in other folders)
