[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "abstractgateway"
version = "0.2.14"
description = "AbstractGateway: deployable Run Gateway host for AbstractRuntime (commands + ledger)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Laurent-Philippe Albou" }]

dependencies = [
  "AbstractRuntime[multimodal]>=0.4.14",
  "abstractagent>=0.3.7",
  "abstractcore[remote,tools,tokens,vision,voice,audio]>=2.13.15",
  "abstractflow>=0.3.11",
  "abstractvision>=0.3.6",
  "abstractvoice>=0.10.3",
  "AbstractMemory[lancedb]>=0.2.6",
  "sentence-transformers<6.0.0,>=5.1.0",
  "numpy<3.0.0,>=1.20.0",
  "setuptools<82.0.0,>=80.10.2",
  "requests<3.0.0,>=2.32.5",
  "urllib3<3.0.0,>=2.5.0",
  "openai<2.0.0,>=1.109.1",
  "httpx<1.0.0,>=0.28.1",
  "anyio<5.0.0,>=4.12.1",
  "Pillow<13.0.0,>=10.0.0",
  "pymupdf4llm<1.0.0,>=0.0.20",
  "pymupdf-layout<2.0.0,>=1.26.6",
  "unstructured[docx,odt,pptx,rtf,xlsx]<0.19.0,>=0.18.32",
  "python-pptx<2.0.0,>=1.0.2",
  "pandas<3.0.0,>=1.0.0",
  "fastapi<1.0.0,>=0.136.0",
  "python-multipart>=0.0.6",
  "uvicorn[standard]<1.0.0,>=0.38.0",
]

[project.optional-dependencies]
# The base package is the remote-light server install. These extras remain as
# compatibility aliases for existing install commands.
http = []
server = []
multimodal = []
memory = []

# Native Apple Gateway profile. This is for direct macOS Python installs, not
# Docker, because MLX/Metal-backed engines need the host Apple runtime. As the
# deployment entry point, Gateway's `apple` profile installs the full native
# Apple stack and all relevant non-NVIDIA framework capabilities.
apple = [
  "AbstractRuntime[multimodal,all-apple]>=0.4.14",
  "abstractagent[all-apple]>=0.3.7",
  "abstractcore[all-apple]>=2.13.15",
  "abstractvision[all-apple]>=0.3.6",
  "abstractvoice[all-apple]>=0.10.3",
  "abstractmusic[all-apple]>=0.1.2",
  "AbstractMemory[all-apple]>=0.2.6",
]

# Native/container GPU Gateway profile. This is the full local GPU aggregate for
# Python installs and for the NVIDIA Docker image.
gpu = [
  "AbstractRuntime[multimodal,all-gpu]>=0.4.14",
  "abstractagent[all-gpu]>=0.3.7",
  "abstractcore[all-gpu]>=2.13.15",
  "abstractvision[all-gpu]>=0.3.6",
  "abstractvoice[all-gpu]>=0.10.3",
  "abstractmusic[all-gpu]>=0.1.2",
  "AbstractMemory[all-gpu]>=0.2.6",
]

# Native macOS aggregate profile for full local+remote Gateway installs.
all-apple = [
  "AbstractRuntime[multimodal,all-apple]>=0.4.14",
  "abstractagent[all-apple]>=0.3.7",
  "abstractcore[all-apple]>=2.13.15",
  "abstractvision[all-apple]>=0.3.6",
  "abstractvoice[all-apple]>=0.10.3",
  "abstractmusic[all-apple]>=0.1.2",
  "AbstractMemory[all-apple]>=0.2.6",
]

# Full GPU aggregate profile for CUDA/ROCm-style local engine hosts.
all-gpu = [
  "AbstractRuntime[multimodal,all-gpu]>=0.4.14",
  "abstractagent[all-gpu]>=0.3.7",
  "abstractcore[all-gpu]>=2.13.15",
  "abstractvision[all-gpu]>=0.3.6",
  "abstractvoice[all-gpu]>=0.10.3",
  "abstractmusic[all-gpu]>=0.1.2",
  "AbstractMemory[all-gpu]>=0.2.6",
]

# Compatibility alias for historical Docker builds. New NVIDIA Docker builds use
# `abstractgateway[gpu]`.
server-nvidia = [
  "AbstractRuntime[multimodal,all-gpu]>=0.4.14",
  "abstractagent[all-gpu]>=0.3.7",
  "abstractcore[all-gpu]>=2.13.15",
  "abstractvision[all-gpu]>=0.3.6",
  "abstractvoice[all-gpu]>=0.10.3",
  "abstractmusic[all-gpu]>=0.1.2",
  "AbstractMemory[all-gpu]>=0.2.6",
]

# Voice/audio capabilities (TTS + STT) via AbstractVoice.
voice = []

# Generative vision capabilities via AbstractCore's AbstractVision plugin.
vision = []

# Compatibility aliases. VisualFlow support and Telegram's AbstractCore tool
# integration are already present in the base remote-light server install.
visualflow = []
telegram = []
dev = [
  "pytest>=7.0.0",
  "httpx>=0.27.0",
]

docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.0.0",
]

# Compatibility alias. The base install is already the remote-light
# batteries-included server; hardware-local engines are selected by `apple` or
# `gpu`.
all = []

[project.scripts]
abstractgateway = "abstractgateway.cli:main"
abstractgateway-config = "abstractgateway.config_cli:main"

[project.urls]
"GitHub" = "https://github.com/lpalbou/abstractgateway"
"Documentation" = "https://www.lpalbou.info/AbstractGateway/"
"Changelog" = "https://github.com/lpalbou/abstractgateway/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/abstractgateway"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --tb=short --strict-markers --strict-config --disable-warnings -p no:cacheprovider"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
markers = [
  "basic: Contract and unit tests that should be fast and offline",
  "integration: Local integration tests using real gateway components",
  "e2e: End-to-end tests; external services remain opt-in via environment variables",
]
