[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "abstractgateway"
version = "0.2.25"
description = "AbstractGateway: deployable Run Gateway host for AbstractRuntime (commands + ledger)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Laurent-Philippe Albou" }]

dependencies = [
  "AbstractRuntime>=0.4.26",
  "abstractagent>=0.3.10",
  "AbstractMemory[lancedb]>=0.2.6",
  "requests<3.0.0,>=2.32.5",
  "urllib3<3.0.0,>=2.5.0",
  "fastapi<1.0.0,>=0.136.0",
  "python-multipart>=0.0.6",
  "uvicorn[standard]<1.0.0,>=0.38.0",
]

[project.optional-dependencies]
# Supported install profiles.
# - Base install (`pip install abstractgateway`) is the remote-light HTTP/SSE server
#   with Runtime multimodal routing and MCP worker support.
# - `embeddings` enables local sentence-transformer embeddings for semantic KG queries.
# - `apple` / `gpu` select hardware-local stacks for the gateway host.
#
# Tooling extras for contributors: `dev`, `docs`.

embeddings = [
  "abstractcore[embeddings]>=2.13.31",
]

# Native Apple Gateway profile. This is for direct macOS Python installs (not
# Docker), because MLX/Metal-backed engines need the host Apple runtime. As the
# deployment entry point, Gateway's `apple` profile installs the full native
# Apple stack and all relevant non-NVIDIA framework capabilities.
apple = [
  "AbstractRuntime[apple]>=0.4.26",
  "abstractagent[apple]>=0.3.10",
  "AbstractMemory[all-apple]>=0.2.6",
]

# Native/container GPU Gateway profile. This is the full local GPU aggregate for
# Python installs and for the NVIDIA Docker image.
gpu = [
  "AbstractRuntime[gpu]>=0.4.26",
  "abstractagent[gpu]>=0.3.10",
  "AbstractMemory[all-gpu]>=0.2.6",
]
dev = [
  "pytest>=7.0.0",
  "httpx>=0.27.0",
]

docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.0.0",
]

[project.scripts]
abstractgateway = "abstractgateway.cli:main"
abstractgateway-config = "abstractgateway.config_cli:main"

[project.urls]
"GitHub" = "https://github.com/lpalbou/abstractgateway"
"Documentation" = "https://www.lpalbou.info/AbstractGateway/"
"Changelog" = "https://github.com/lpalbou/abstractgateway/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/abstractgateway"]

[tool.hatch.build.targets.wheel.force-include]
"flows/bundles/basic-agent.flow" = "abstractgateway/flows/bundles/basic-agent.flow"
"flows/bundles/basic-agent@0.0.1.flow" = "abstractgateway/flows/bundles/basic-agent@0.0.1.flow"

[tool.hatch.build.targets.sdist]
exclude = [
  "/docs/backlog/**",
  "/flows/**",
  "/tests/**",
]

[tool.hatch.build.targets.sdist.force-include]
"flows/bundles/basic-agent.flow" = "flows/bundles/basic-agent.flow"
"flows/bundles/basic-agent@0.0.1.flow" = "flows/bundles/basic-agent@0.0.1.flow"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
addopts = "-ra --tb=short --strict-markers --strict-config --disable-warnings -p no:cacheprovider"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
markers = [
  "basic: Contract and unit tests that should be fast and offline",
  "integration: Local integration tests using real gateway components",
  "e2e: End-to-end tests; external services remain opt-in via environment variables",
]
